@@ -62,6 +62,7 @@ class CSVNStatusListCtrlDropTarget;
 #define SVNSLC_SHOWDIRECTFILES	0x000010000
 #define SVNSLC_SHOWDIRECTFOLDER 0x000020000
 #define SVNSLC_SHOWEXTERNALFROMDIFFERENTREPO 0x000040000
+#define SVNSLC_SHOWSWITCHED		0x000080000
 
 #define SVNSLC_SHOWDIRECTS		(SVNSLC_SHOWDIRECTFILES | SVNSLC_SHOWDIRECTFOLDER)
 
